--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,6 +19,7 @@
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Main</a>
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">About</a>
       </nav>
+      <a class="btn btn-warning" href="/create-article">Create</a>
     </div>
     {% block body %}{% endblock %}
 <footer class="container pt-4 my-md-5 pt-md-5 border-top">
