--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,8 @@
       <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Main</a>
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">About</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/posts">Posts</a>
+
       </nav>
       <a class="btn btn-warning" href="/create-article">Create</a>
     </div>
