--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -10,9 +10,9 @@
 
     <div class="alert alert-info">
         <p>{{ article.text }}</p>
-        <p><b>Date: {{ article.date.date() }}</b></p>
-        <a href="/posts/{{ article.id }}/delete" class="btn btn-danger">Delete</a>
-        <a href="/posts/{{ article.id }}/update" class="btn btn-success">Update</a>
+        <p><b>Ամսաթիվ: {{ article.date.date() }}</b></p>
+        <a href="/posts/{{ article.id }}/delete" class="btn btn-danger">Հեռացնել</a>
+        <a href="/posts/{{ article.id }}/update" class="btn btn-success">Թարմացնել</a>
     </div>
 </div>
 {% endblock %}
