--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,16 +12,16 @@
 <body>
 <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-        <span class="fs-4">Flask Project</span>
+        <span class="fs-4">News.am</span>
       </a>
 
       <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Main</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">About</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/posts">Posts</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Գլխավոր</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">Մեր մասին</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/posts">Հոդվածներ</a>
 
       </nav>
-      <a class="btn btn-warning" href="/create-article">Create</a>
+      <a class="btn btn-warning" href="/create-article">Ստեղծել Հոդված</a>
     </div>
     {% block body %}{% endblock %}
 <footer class="container pt-4 my-md-5 pt-md-5 border-top">
